updated links and color

--- a/coin/new.html
+++ b/coin/new.html
@@ -180,7 +180,7 @@ while (i<100){
 
 function determineColor(input){
     var value = parseFloat(input);
-    if (value <=0){
+    if (value >=0){
         return "#518651";
     }
     if(value <0){
@@ -567,12 +567,12 @@ function draws(value){
 <div>
 <h1 style="text-align: center">Bitcoin</h1>
 <p> <i>Bitcoin uses peer-to-peer technology to operate with no central authority or banks; managing transactions and the issuing of bitcoins is carried out collectively by the network. Although other cryptocurrencies have come before, Bitcoin is the first decentralized cryptocurrency - Its reputation has spawned copies and evolution in the space.</i></p>
-<p> <b> Type: </b> Coin</p>
-<p> <b> Algorithm: </b> SHA256d</p>
-<p> <b> Proof Type: </b> Proof of Work</p>
+<p> <b> Algorithm: </b> <a href="https://en.bitcoin.it/wiki/SHA-256" target="_blank" >SHA256d</a> </p>   
+<p> <b> Proof Type: </b> <a href="https://en.bitcoin.it/wiki/Proof_of_work" target="_blank" >Proof of Work</a></p>    
 <p> <b>Founders: </b> <a href="https://en.wikipedia.org/wiki/Satoshi_Nakamoto" target="_blank" >Satoshi Nakamoto</a>  </p>
 <p> <b> Inital relase: </b> 9 January 2009</p>
 <p> <b> Written in: </b> C++</p> 
+<p> <a href="https://www.blockchain.com/explorer" target="_blank" >Explore</a> </p> 
 <p><a href="https://bitcoin.org" target="_blank" >Website</a>
 <a href="https://github.com/bitcoinjs/bitcoinjs-lib" target="_blank" >Github</a>
 <a href="https://www.facebook.com/bitcoins/" target="_blank" >Facebook</a>
@@ -645,8 +645,9 @@ function draws(value){
 <script src="https://cointelegraph.com/news-widget" data-ct-widget-limit="50" data-ct-widget-theme="dark" data-ct-widget-size="large" data-ct-widget-images="true"></script>
 
 </div>
+
 <div class="footer">
-  <p>Built by  <a href="https://github.com/mvhdi" target="_blank" >Mahdi</a> © 2018</p>
+  <p>© 2018  Built by  <a href="https://github.com/mvhdi" target="_blank" >Mahdi</a>  with <a href="https://github.com/alexandersimoes/d3plus/tree/2.0" target="_blank" >D3Plus</a></p>
 </div>
 </body>
 
