--- a/coinvista.html
+++ b/coinvista.html
@@ -11,7 +11,7 @@
   <script src="//d3plus.org/js/d3.js"></script>
   <script src="//d3plus.org/js/d3plus.js"></script>
   
-    <div id="viz" style="margin-left: 0px; margin-top: 0px; margin-right: 0px"></div>
+    <div id="viz" style="margin-left: 10px; margin-top: 10px; margin-right: 0px"></div>
   <div id="vizz"> </div>
   
   <script src='test.js'></script>
@@ -112,11 +112,11 @@
                     
     </div>
 
-<!--     <div id = "minnnn" style="height:500px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; font-size: 12px; box-sizing:content-box; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #1D2330;padding:1px;padding: 0px; margin: 0px;">
+    <div id = "minnnn" style="height:500px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; font-size: 12px; box-sizing:content-box; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #1D2330;padding:1px;padding: 0px; margin: 0px;">
       <div style="height:540px;padding:0px;margin:0px; margin-bottom: 0">
         <iframe id="myFrame" src="https://widget.coinlib.io/widget?type=chart&theme=dark&coin_id=859&pref_coin_id=1505" width="100%" height="536" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;box-sizing:content-box; margin-bottom: 0"></iframe>
       </div>
-    </div> -->
+    </div>
 <h3 style="text-align: center"> PROFILE</h3>
     <div class="wrap-collabsible">
       <input id="background" class="toggle" type="checkbox">
