updated css to bootstrap

--- a/coinvista.html
+++ b/coinvista.html
@@ -7,7 +7,7 @@
 <body style="background-color: #1D2330; color: white; height: 100vh">
   <script src="//d3plus.org/js/d3.js"></script>
   <script src="//d3plus.org/js/d3plus.js"></script>
-  <div id="viz" style="margin-left: 10px; margin-top: 5px; margin-right: 10px; margin-bottom: 0px; height: 90vh"></div>
+  <div id="viz"></div>
   <script src='coinInfo.js'></script>
   <script src='coinvista.js'></script>
   <div style="text-align: center; ">
